# microGPT

./: .gitignore  README.md  WINDOWSTEST.md  pyproject.toml
docs/: commands.md
experiments/: gqa_cache_memory.py  kv_cache_generation.py  moe_dense_compare.py  moe_router_stats.py
microchat/: chat_eval.py  checkpoint_manager.py  common.py  dataloader.py  dataset.py  engine.py  gpt.py  tokenizer.py
microchat/model/: __init__.py  attention.py  config.py  gpt.py  layers.py  optim.py
scripts/: __init__.py  base_eval.py  base_eval.sample.jsonl  base_train.py  chat_cli.py  chat_eval.dev_en.jsonl  chat_eval.phase2_en.jsonl  chat_eval.py  chat_eval.repetition_en.jsonl  chat_eval.sample.jsonl  chat_eval_sweep.py  chat_phase2_mix_en.jsonl  chat_phase3_anti_repeat_en.jsonl  chat_sft.py  identity_conversations.anchor_en.jsonl  identity_conversations.curated.jsonl  identity_conversations.sample.jsonl  tok_train.py
tasks/: __init__.py  common.py  customjson.py  smoltalk.py  ultrachat.py
tests/: test_base_training.py  test_chat_eval.py  test_chat_sft.py  test_engine.py  test_experiments.py  test_model_refactor.py
